--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-redux": "^7.2.2",
     "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
