--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
     "antd": "^4.12.0",
     "axios": "^0.21.1",
     "react": "^17.0.1",
@@ -17,8 +13,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "typescript": "^4.1.3"
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.16",
-    "typings-for-css-modules-loader": "^1.7.0"
+    "@types/react-redux": "^7.1.16"
   }
 }
